// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders custom component 1`] = `
<div
  className="content-header"
>
  <h1>
    <small />
  </h1>
</div>
`;

exports[`renders default 1`] = `
<section
  className="content-header"
>
  <h1>
    <small />
  </h1>
</section>
`;

exports[`renders subtitle 1`] = `
<section
  className="content-header"
>
  <h1>
    <small>
      But only a little
    </small>
  </h1>
</section>
`;

exports[`renders title 1`] = `
<section
  className="content-header"
>
  <h1>
    Super important
    <small />
  </h1>
</section>
`;
